--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "seed": "node backend/seeds.js",
-    "serve:front": "webpack-dev-server --mode-development"
+    "serve:front": "webpack-dev-server --mode-development",
+    "build": "webpack -p"
   },
   "author": "",
   "license": "ISC",
